--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,8 @@ html, body {
 main {
   min-height: 100%;
   display: flex;
-  background-color: black;
+  background-color: #222;
   color: whitesmoke;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: small;
 }
 
 /* TOOLTIP */
@@ -42,14 +40,13 @@ main {
 .ro-output {
   box-sizing: border-box;
   flex: 1 1 initial;
+  background-color: #333;
   padding-left: 1em;
   padding-right: 1em;
 }
 .band-list {
   box-sizing: border-box;
   flex: 1 1 20%;
-  background-color: #333;
-
   padding-left: 1em;
   padding-right: 1em;;
 }
@@ -61,9 +58,7 @@ main {
 }
 .handler::before {
   content: '';
-  display: block;
-  width: 4px;
+  width: 1em;
   height: 100%;
-  background: #333; 
   margin: 0 auto; 
 }
