--- a/src/festival-settings-dialog/festival-settings-dialog.css
+++ b/src/festival-settings-dialog/festival-settings-dialog.css
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 body {
   margin: 0;
   background-color: #333;
@@ -14,6 +16,22 @@ input {
   margin-bottom: 1em;
   background-color: grey;
   color: white;
+}
+button {
+  margin-bottom: 1em;
+  background-color: grey;
+  color: white;
+  outline: none;
+}
+table {
+  width: 100%;
+  margin-bottom: 1em;
+}
+tr {
+  outline: 1px solid grey;
+}
+td {
+  padding: 0.5em;
 }
 select {
   width: 100%;
