--- a/src/resizable-layout/resizable-layout.css
+++ b/src/resizable-layout/resizable-layout.css
@@ -1,27 +1,43 @@
+body {
+  display: flex;
+  flex-flow: column;
+}
+
+.menu {
+  flex: 0 0 auto;
+}
+
 main {
   background-color: #222;
   color: whitesmoke;
-  height: 100%;
+  display: flex;
+  flex: 1 1 auto;
   width: 100%;
-  overflow: hidden;
 }
 
 .ro-output {
   background-color: #333;
   float: left;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 .band-list {
   float: left;
   position: relative;
-  height: 100%;
+  display: flex;
+  /*height: 100%;*/
+}
+
+.band-list-content-container {
+  display: flex;
+  flex-flow: column;
 }
 
 .band-list-content {
   float: left;
   position: relative;
-  height: 100%;
+  flex: 1 1 auto;
+  /*height: 100%;*/
 }
 
 .handler {
@@ -29,5 +45,6 @@ main {
   padding: 0;
   cursor: ew-resize;
   float: right;
-  height: 100%;
+  height: inherit;
+  flex: 1 1 auto;
 }
